--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sticky_headers: ^0.3.0+2
   html: ^0.15.4
   lottie: ^3.1.2
+  blobs: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
