--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,9 +27,16 @@ jobs:
       - name: Build web
         run: flutter build web --no-tree-shake-icons
 
+      - name: Move files to root
+        run: |
+          mkdir tmp
+          mv build/web/* tmp/
+          mv tmp/* .
+          rm -rf tmp build
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/web
+          publish_dir: .
           publish_branch: gh-pages
