--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-'on': pull_request
+"on": pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -10,11 +10,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: >-
           sudo snap install flutter --classic && flutter channel beta && flutter
-          config --enable-web && flutter build web
+          config --enable-web && flutter build web --no-tree-shake-icons
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEB_PORTFOLIO_DDD55 }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_WEB_PORTFOLIO_DDD55 }}"
           projectId: web-portfolio-ddd55
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
