--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,16 +27,9 @@ jobs:
       - name: Build web
         run: flutter build web --no-tree-shake-icons
 
-      - name: Move files to root
-        run: |
-          mkdir tmp
-          mv build/web/* tmp/
-          mv tmp/* .
-          rm -rf tmp build
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
+          publish_dir: build/web
           publish_branch: gh-pages
