--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PERSONAL_WEBSITE_1851B }}
           channelId: live
           projectId: personal-website-1851b
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
